--- a/client/html/index.html
+++ b/client/html/index.html
@@ -9,7 +9,7 @@
   <div id="app">
     <app></app>
   </div>
-  <script src="/dist/build.js"></script>
+  <script src="../dist/build.js"></script>
 </body>
 
 </html>
