--- a/client/html/room.html
+++ b/client/html/room.html
@@ -9,6 +9,6 @@
     <div id="app">
       <room></room>
     </div>
-    <script src="/dist/build.js"></script>
+    <script src="../dist/build.js"></script>
   </body>
 </html>
